--- a/libs/ng-table-ui/src/lib/table.styles.scss
+++ b/libs/ng-table-ui/src/lib/table.styles.scss
@@ -1,9 +1,28 @@
 table {
     table-layout: fixed;
     text-align: left;
-    border-radius: 0.5rem 0.5rem 0 0;
+    border: 1px solid rgb(192, 189, 189);
+    box-shadow: 2px 2px rgb(192, 189, 189);
+    border-radius: 0.5rem;
     border-spacing: 0;
     width: 100%;
+    font-family: 'Lucida Sans',
+        'Lucida Sans Regular',
+        'Lucida Grande',
+        'Lucida Sans Unicode',
+        Geneva,
+        Verdana,
+        sans-serif;
+}
+
+tr th {
+    border-bottom: 1px solid rgb(191, 191, 191);
+}
+
+
+
+.theader-text {
+    font-style: bold;
 }
 
 th:nth-last-child(1),
@@ -12,24 +31,39 @@ td:nth-last-child(1) {
     border-right: none !important;
 }
 
-th:nth-last-child(1) {
-    border-radius: 0 0.5rem 0 0;
+.row-item {
+    display: flex;
+    flex-direction: row;
 }
 
-th:nth-child(1) {
-    border-radius: 0.5rem 0 0 0;
+
+td:nth-last-child(1)>.row-item {
+    justify-content: end;
+}
+
+
+// th:nth-last-child(1) {
+//     border-radius: 0 0.5rem 0 0;
+// }
+
+// th:nth-child(1) {
+//     border-radius: 0.5rem 0 0 0;
+// }
+
+tr td {
+    border-bottom: 1px solid rgb(220, 220, 220);
+}
+
+tbody>tr:last-child>td {
+    border-bottom: 0;
 }
 
 table td,
 table th {
-    border-right: 1px solid rgb(200, 200, 224);
+    border-right: 1px solid rgb(192, 189, 189);
     padding: 10px;
 }
 
-td {
-    background-color: rgb(109, 109, 217, 0.3);
-}
-
-th {
-    background-color: rgb(109, 109, 217, 0.8);
+p {
+    margin: 0;
 }
